--- a/config.toml
+++ b/config.toml
@@ -37,18 +37,18 @@ disqusShortname = ""
 
   # Navigation Section
   [params.navigation]
-    title = "Forty"
-    subtitle = "By HTML5 Up"
+    title = "Simon Roberge"
+    subtitle = "Réalisateur, producteur et scénariste"
     menu = "Menu"
     # Optional logo as brand stored in img/
     # logo = "logo.png"
 
     [[params.navigation.links]]
-      name = "Home"
+      name = "Accueil"
       url = "#"
 
     [[params.navigation.links]]
-      name = "Blogs"
+      name = "projets"
       url = "blogs"
 
     [[params.navigation.links]]
@@ -81,9 +81,9 @@ disqusShortname = ""
   [params.banner]
     # To change the background image on the homepage banner, replace 'banner.jpg' in
     # the 'static/img' folder.
-    title = "Bonjour, je suis Simon Roberge"
-    subtitle = "RÉALISATEUR, PRODUCTEUR ET SCÉNARISTE"
-    buttonText = "Get Started"
+    title = "Simon Roberge"
+    subtitle = "Cinéaste"
+    buttonText = "Voici mes projets"
 
 
   # Tiles Section
@@ -92,26 +92,26 @@ disqusShortname = ""
     # Display your showcases here.
 
     [[params.tiles.showcase]]
-      title = "Aliquam"
-      subtitle = "Ipsum Dolor Sit Amet"
+      title = "Projets en cours"
+      subtitle = "À venir prochainement sur vos écrans"
       image = "pic01.jpg"
       url = "blogs/aliquam"
 
     [[params.tiles.showcase]]
-      title = "Tempus"
-      subtitle = "Feugiat Amet Tempus"
+      title = "Foolin'"
+      subtitle = "Vidéoclip"
       image = "pic02.jpg"
       url = "blogs/tempus"
 
     [[params.tiles.showcase]]
-      title = "Magna"
-      subtitle = "Lorem Etiam Nullam"
+      title = "Mon collègue Arul"
+      subtitle = "Documentaire"
       image = "pic03.jpg"
       url = "blogs/magna"
 
     [[params.tiles.showcase]]
-      title = "Ipsum"
-      subtitle = "Nisl Sed Aliquam"
+      title = "Dialogue entre elle et moi"
+      subtitle = "Documentaire"
       image = "pic04.jpg"
       url = "blogs/ipsum"
 
@@ -151,8 +151,8 @@ disqusShortname = ""
   # Contact section
   [params.contact]
     enable = true
-    buttonSend = "Send message"
-    buttonClear = "Clear"
+    buttonSend = "Transmettre votre message"
+    buttonClear = "Effacer"
 
     # Since this template is static, the contact form uses www.formspree.io as a
     # proxy. The form makes a POST request to their servers to send the actual
@@ -187,7 +187,7 @@ disqusShortname = ""
   # Footer section
   [params.footer]
     enable = true
-    copyright = "Company Name"
+    copyright = "Simon Roberge"
 
     # Uses font awesome icons
     [[params.footer.social]]
