--- a/config.toml
+++ b/config.toml
@@ -48,11 +48,11 @@ disqusShortname = ""
       url = "#"
 
     [[params.navigation.links]]
-      name = "projets"
+      name = "Projets réalisés"
       url = "blogs"
 
     [[params.navigation.links]]
-      name = "Generic Blog"
+      name = "Projets en cours"
       url = "blogs/ipsum"
 
     [[params.navigation.links]]
@@ -83,7 +83,7 @@ disqusShortname = ""
     # the 'static/img' folder.
     title = "Simon Roberge"
     subtitle = "Cinéaste"
-    buttonText = "Voici mes projets"
+    buttonText = "Voici mes réalisations récentes"
 
 
   # Tiles Section
@@ -91,11 +91,11 @@ disqusShortname = ""
     enable = true
     # Display your showcases here.
 
-    [[params.tiles.showcase]]
-      title = "Projets en cours"
-      subtitle = "À venir prochainement sur vos écrans"
-      image = "pic01.jpg"
-      url = "blogs/aliquam"
+    #[[params.tiles.showcase]]
+     # title = "Projets en cours"
+      #subtitle = "À venir prochainement sur vos écrans"
+      #image = "pic01.jpg"
+      #url = "blogs/aliquam"
 
     [[params.tiles.showcase]]
       title = "Foolin'"
@@ -115,36 +115,32 @@ disqusShortname = ""
       image = "pic04.jpg"
       url = "blogs/ipsum"
 
-    [[params.tiles.showcase]]
-      title = "Consequat"
-      subtitle = "Ipsum Dolor Sit Amet"
-      image = "pic05.jpg"
-      url = "blogs/ipsum"
+   # [[params.tiles.showcase]]
+   #   title = "Consequat"
+   #   subtitle = "Ipsum Dolor Sit Amet"
+   #   image = "pic05.jpg"
+   #   url = "blogs/ipsum"
 
-    [[params.tiles.showcase]]
-      title = "Etiam"
-      subtitle = "Feugiat Amet Tempus"
-      image = "pic06.jpg"
-      url = "blogs/ipsum"
+   # [[params.tiles.showcase]]
+   #   title = "Etiam"
+   #   subtitle = "Feugiat Amet Tempus"
+   #   image = "pic06.jpg"
+   #   url = "blogs/ipsum"
     # You can make more showcases by copy and pasting the code above
 
   [params.blog]
     # All blogs defined in their own files. You can find example blogs
     # at 'exampleSite/content/blogs'. Copy the 'blogs' folder into the 'content' directory
     # at the root of this Hugo site.
-    # For more informtion take a look at the README.
+    # For more information take a look at the README.
     # To add more blogs just copy and paste the code.
 
   # Section Type Two
   [params.two]
     enable = true
-    title = "Massa libero"
-    subtitle = """Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero.
-    Mauris aliquet magna magna sed nunc rhoncus pharetra.
-    Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor.
-    Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero.
-    Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus."""
-    buttonText = "Get Started"
+    title = "Projets en cours"
+    subtitle = "À venir prochainement sur vos écrans"
+    buttonText = "Allons-y!"
     url = "blogs"
 
 
