--- a/config.toml
+++ b/config.toml
@@ -83,7 +83,7 @@ disqusShortname = ""
     # the 'static/img' folder.
     title = "Simon Roberge"
     subtitle = "Cinéaste"
-    buttonText = "Voici mes réalisations récentes"
+    buttonText = "Mes réalisations récentes"
 
 
   # Tiles Section
@@ -100,19 +100,19 @@ disqusShortname = ""
     [[params.tiles.showcase]]
       title = "Foolin'"
       subtitle = "Vidéoclip"
-      image = "pic02.jpg"
+      image = "Foolin.jpg"
       url = "blogs/tempus"
 
     [[params.tiles.showcase]]
       title = "Mon collègue Arul"
       subtitle = "Documentaire"
-      image = "pic03.jpg"
+      image = "Arul.jpg"
       url = "blogs/magna"
 
     [[params.tiles.showcase]]
       title = "Dialogue entre elle et moi"
       subtitle = "Documentaire"
-      image = "pic04.jpg"
+      image = "Dialogue.jpg"
       url = "blogs/ipsum"
 
    # [[params.tiles.showcase]]
