--- a/config.toml
+++ b/config.toml
@@ -49,11 +49,11 @@ disqusShortname = ""
 
     [[params.navigation.links]]
       name = "Projets réalisés"
-      url = "blogs"
+      url = "blogs/pt"
 
     [[params.navigation.links]]
       name = "Projets en cours"
-      url = "blogs/ipsum"
+      url = "blogs/pav"
 
     [[params.navigation.links]]
       name = "Elements"
@@ -67,14 +67,14 @@ disqusShortname = ""
     #    url = "UrlOfLink"
 
     # Button Style 1
-    [[params.navigation.button1]]
-      name = "Get Started"
-      url = "blogs"
+    #[[params.navigation.button1]]
+    #  name = "Get Started"
+    #  url = "blogs"
 
     # Button Style 2
-    [[params.navigation.button2]]
-      name = "Log In"
-      url = "#"
+    #[[params.navigation.button2]]
+    #  name = "Log In"
+    #  url = "#"
 
 
   # Banner section
@@ -83,7 +83,7 @@ disqusShortname = ""
     # the 'static/img' folder.
     title = "Simon Roberge"
     subtitle = "Cinéaste"
-    buttonText = "Mes réalisations récentes"
+    buttonText = "Réalisations récentes"
 
 
   # Tiles Section
@@ -101,19 +101,19 @@ disqusShortname = ""
       title = "Foolin'"
       subtitle = "Vidéoclip"
       image = "Foolin.jpg"
-      url = "blogs/tempus"
+      url = "blogs/pt/foolin"
 
     [[params.tiles.showcase]]
       title = "Mon collègue Arul"
       subtitle = "Documentaire"
       image = "Arul.jpg"
-      url = "blogs/magna"
+      url = "blogs/pt/mca"
 
     [[params.tiles.showcase]]
       title = "Dialogue entre elle et moi"
       subtitle = "Documentaire"
       image = "Dialogue.jpg"
-      url = "blogs/ipsum"
+      url = "blogs/pt/deem"
 
    # [[params.tiles.showcase]]
    #   title = "Consequat"
@@ -141,7 +141,7 @@ disqusShortname = ""
     title = "Projets en cours"
     subtitle = "À venir prochainement sur vos écrans"
     buttonText = "Allons-y!"
-    url = "blogs"
+    url = "blogs/pav"
 
 
   # Contact section
@@ -170,15 +170,15 @@ disqusShortname = ""
     title = "Courriel"
     email = "simonroberge@tutanota.com"
 
-    [[params.contact.phone]]
-    title = "Phone"
-    phone = "(000) 000-0000 x1234"
+   # [[params.contact.phone]]
+   # title = "Phone"
+   # phone = "(000) 000-0000 x1234"
 
-    [[params.contact.address]]
-    title = "Address"
-    street = "Street"
-    city = "City, ST 00000"
-    country = "Country"
+   # [[params.contact.address]]
+   # title = "Address"
+   # street = "Street"
+   # city = "City, ST 00000"
+   # country = "Country"
 
   # Footer section
   [params.footer]
