--- a/config.toml
+++ b/config.toml
@@ -55,9 +55,9 @@ disqusShortname = ""
       name = "Projets en cours"
       url = "blogs/pav"
 
-    [[params.navigation.links]]
-      name = "Elements"
-      url = "elements.html"
+    #[[params.navigation.links]]
+    #  name = "Elements"
+    #  url = "elements.html"
 
     # Add custom links here by uncommenting code below. To remove links just delete
     # the [[params.navigation.links]] map associated with that link. Copy and paste
@@ -91,12 +91,6 @@ disqusShortname = ""
     enable = true
     # Display your showcases here.
 
-    #[[params.tiles.showcase]]
-     # title = "Projets en cours"
-      #subtitle = "À venir prochainement sur vos écrans"
-      #image = "pic01.jpg"
-      #url = "blogs/aliquam"
-
     [[params.tiles.showcase]]
       title = "Foolin'"
       subtitle = "Vidéoclip"
@@ -115,17 +109,12 @@ disqusShortname = ""
       image = "Dialogue.jpg"
       url = "blogs/pt/deem"
 
-   # [[params.tiles.showcase]]
-   #   title = "Consequat"
-   #   subtitle = "Ipsum Dolor Sit Amet"
-   #   image = "pic05.jpg"
-   #   url = "blogs/ipsum"
+    [[params.tiles.showcase]]
+      title = "Projets en cours"
+      subtitle = "À venir prochainement sur vos écrans"
+      image = "cinéma.jpg"
+      url = "blogs/pav"
 
-   # [[params.tiles.showcase]]
-   #   title = "Etiam"
-   #   subtitle = "Feugiat Amet Tempus"
-   #   image = "pic06.jpg"
-   #   url = "blogs/ipsum"
     # You can make more showcases by copy and pasting the code above
 
   [params.blog]
@@ -137,7 +126,7 @@ disqusShortname = ""
 
   # Section Type Two
   [params.two]
-    enable = true
+    enable = false
     title = "Projets en cours"
     subtitle = "À venir prochainement sur vos écrans"
     buttonText = "Allons-y!"
