--- a/config.toml
+++ b/config.toml
@@ -85,6 +85,13 @@ disqusShortname = ""
     subtitle = "Cinéaste"
     buttonText = "Réalisations récentes"
 
+# Section Type Two
+  [params.two]
+    enable = true
+    title = "Projets en cours"
+    subtitle = "À venir prochainement sur vos écrans"
+    buttonText = "Allons-y!"
+    url = "blogs/pav"
 
   # Tiles Section
   [params.tiles]
@@ -124,13 +131,7 @@ disqusShortname = ""
     # For more information take a look at the README.
     # To add more blogs just copy and paste the code.
 
-  # Section Type Two
-  #[params.two]
-  #  enable = false
-  #  title = "Projets en cours"
-  #  subtitle = "À venir prochainement sur vos écrans"
-  #  buttonText = "Allons-y!"
-  #  url = "blogs/pav"
+  
 
 
   # Contact section
