--- a/config.toml
+++ b/config.toml
@@ -137,7 +137,7 @@ disqusShortname = ""
 
   # Contact section
   [params.contact]
-    enable = true
+    enable = false
     buttonSend = "Transmettre votre message"
     buttonClear = "Effacer"
 
@@ -152,14 +152,14 @@ disqusShortname = ""
     # - send a dummy email yourself to confirm your account
     # - click the confirm link in the email from www.formspree.io
     # - you're done. Happy mailing!
-    formEmail = "simonroberge@tutanota.com"
+    # formEmail = "lroberge.com"
 
     # Contact Section
     # You can add multiple emails, phone numbers, or addresses
     # by copying the corresponding map with frontmatter code.
-    [[params.contact.email]]
-    title = "Courriel"
-    email = "simonroberge@tutanota.com"
+    #[[params.contact.email]]
+    # title = "Courriel"
+    # email = "simonroberge@tutanota.com"
 
    # [[params.contact.phone]]
    # title = "Phone"
