--- a/config.toml
+++ b/config.toml
@@ -178,30 +178,35 @@ disqusShortname = ""
 
     # Uses font awesome icons
     [[params.footer.social]]
-      icon = "fa-twitter"
-      url= "https://www.twitter.com"
-      label = "Twitter"
+      icon = "fa-vimeo"
+      url= "https://vimeo.com/user84907166"
+      label = "Vimeo"
+#    
+    #[[params.footer.social]]
+    #  icon = "fa-twitter"
+    #  url= "https://www.twitter.com"
+    #  label = "Twitter"
 
-    [[params.footer.social]]
-      icon = "fa-facebook"
-      url= "https://www.facebook.com"
-      label = "Facebook"
-
-    [[params.footer.social]]
-      icon = "fa-instagram"
-      url= "https://www.instagram.com"
-      label = "Instagram"
-
-    [[params.footer.social]]
-      icon = "fa-github"
-      url= "https://www.github.com"
-      label = "GitHub"
-
-    [[params.footer.social]]
-      icon = "fa-linkedin"
-      url= "https://www.linkedin.com"
-      label = "LinkedIn"
-
+#    [[params.footer.social]]
+#      icon = "fa-facebook"
+#      url= "https://www.facebook.com"
+#      label = "Facebook"
+#
+#    [[params.footer.social]]
+#      icon = "fa-instagram"
+#      url= "https://www.instagram.com"
+#      label = "Instagram"
+#
+#    [[params.footer.social]]
+#      icon = "fa-github"
+#      url= "https://www.github.com"
+#      label = "GitHub"
+#
+#    [[params.footer.social]]
+#      icon = "fa-linkedin"
+#      url= "https://www.linkedin.com"
+#      label = "LinkedIn"
+#
     [[params.footer.quicklinks]]
       text = "Design: "
       url= "https://www.html5up.net"
