--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "themes/forty"]
 	path = themes/forty
 	url = https://github.com/MarcusVirg/forty
+[submodule "quarante"]
+	path = quarante
+	url = https://github.com/bergluc/quarante
+[submodule "themes/quarante"]
+	path = themes/quarante
+	url = https://github.com/bergluc/quarante
