--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@
 baseURL = "https://simonroberge.com"
 languageCode = "fr-ca"
 title = "Simon Roberge"
-theme = "quarante"
+theme = "forty"
 
 # Enter your tracking code to enable Google Analytics
 googleAnalytics = ""
