--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,13 @@
 [submodule "themes/forty"]
 	path = themes/forty
 	url = https://github.com/MarcusVirg/forty
-[submodule "quarante"]
-	path = quarante
+
+[submodule "themes/--force"]
+	path = themes/--force
 	url = https://github.com/bergluc/quarante
-[submodule "themes/quarante"]
-	path = themes/quarante
+[submodule "themes/--name"]
+	path = themes/--name
+	url = https://github.com/bergluc/quarante
+[submodule "themes/quart"]
+	path = themes/quart
 	url = https://github.com/bergluc/quarante
